force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction (Old)</label>
    <nameField>
        <displayFormat>{YY}{00000000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>