force-app/main/default/objects/Payment_Transaction__c/fields/amount_charged__c.field-meta.xml
<CustomField>
    <fullName>amount_charged__c</fullName>
    <inlineHelpText>This is the Amount Original + Amount Surcharge</inlineHelpText>
    <label>Amount Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>