force-app/main/default/objects/Payment_Transaction__c/fields/amount_original__c.field-meta.xml
<CustomField>
    <fullName>amount_original__c</fullName>
    <inlineHelpText>This is the amount of the payment being made in this transaction not including the Amount Surcharge.</inlineHelpText>
    <label>Amount Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>