force-app/main/default/objects/Payment_Transaction__c/fields/crn3__c.field-meta.xml
<CustomField>
    <fullName>crn3__c</fullName>
    <label>CRN3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>