force-app/main/default/objects/Payment_Transaction__c/fields/Dept_Date_180__c.field-meta.xml
<CustomField>
    <fullName>Dept_Date_180__c</fullName>
    <formula>Dept_date__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept Date + 180</label>
    <type>Date</type>
</CustomField>