force-app/main/default/objects/Payment_Transaction__c/fields/Dept_date__c.field-meta.xml
<CustomField>
    <fullName>Dept_date__c</fullName>
    <formula>order__r.departures_dates__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept date</label>
    <type>Date</type>
</CustomField>