force-app/main/default/objects/Payment_Transaction__c/fields/mIn_540_180__c.field-meta.xml
<CustomField>
    <fullName>mIn_540_180__c</fullName>
    <formula>If( Dept_Date_180__c &lt;  Transaction_540__c , Dept_Date_180__c,Transaction_540__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mIn 540 &amp; 180</label>
    <type>Date</type>
</CustomField>