force-app/main/default/objects/Payment_Transaction__c/fields/paid_by_name__c.field-meta.xml
<CustomField>
    <fullName>paid_by_name__c</fullName>
    <label>Paid By Name</label>
    <length>72</length>
    <type>Text</type>
</CustomField>