force-app/main/default/objects/Payment_Transaction__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <formula>CreatedDate+(29.17/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Date</label>
    <type>DateTime</type>
</CustomField>