force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_365D__c.field-meta.xml
<CustomField>
    <fullName>Transaction_365D__c</fullName>
    <formula>IF(( TODAY() - transaction_date__c  &lt; 365),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction &lt; 365D</label>
    <type>Text</type>
</CustomField>