force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_540__c.field-meta.xml
<CustomField>
    <fullName>Transaction_540__c</fullName>
    <formula>transaction_date__c + 540</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction + 540</label>
    <type>Date</type>
</CustomField>