force-app/main/default/objects/Payment_Transaction__c/fields/transaction_date__c.field-meta.xml
<CustomField>
    <fullName>transaction_date__c</fullName>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>