force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Dept__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Dept__c</fullName>
    <formula>order__r.departures_dates__r.date__c -  transaction_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction-Dept</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>