force-app/main/default/objects/Payment_Transaction__c/fields/X540_180mmYY__c.field-meta.xml
<CustomField>
    <fullName>X540_180mmYY__c</fullName>
    <formula>TEXT(MOnth(mIn_540_180__c)) &amp; &quot;/&quot;&amp;TEXT(YEAR(mIn_540_180__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>540&amp;180mmYY</label>
    <type>Text</type>
</CustomField>