force-app/main/default/objects/Payment_Transaction__c/validationRules/Expired_Order_payment_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Expired_Order_payment_rule</fullName>
    <active>true</active>
    <description>Error if order status = Expired</description>
    <errorConditionFormula>ISPICKVAL(order__r.order_status__c, &quot;Expired&quot;)</errorConditionFormula>
    <errorMessage>Order is Expired - you cannot add a payment to this order</errorMessage>
</ValidationRule>