force-app/main/default/objects/Payment_Transaction__c/validationRules/Negative_Must_be_refund.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Must_be_refund</fullName>
    <active>true</active>
    <description>Negative amounts should be &apos;Refund&apos; Type</description>
    <errorConditionFormula>AND(
ISPICKVAL( transaction_type__c , &quot;Payment&quot;),
OR( amount_original__c &lt; 0 , amount_charged__c &lt; 0 )
)</errorConditionFormula>
    <errorDisplayField>transaction_type__c</errorDisplayField>
    <errorMessage>Negative amounts should be &apos;Refund&apos; Type</errorMessage>
</ValidationRule>